# chatssi

./: .envrc  .gitignore  README.md  pyproject.toml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  AuthCallback.tsx  Chat.tsx  ChatTextbox.tsx  NewChat.tsx  SimpleState.ts  main.tsx
client/src/api-client/: sdk.gen.ts  types.gen.ts
server/: auth.py  bigtable_client.py  main.py
server/api/: __init__.py  auth.py  chat.py
server/models/: __init__.py  bigtable_chat.py  bigtable_user.py  chat.py  user.py
